# personal-finances

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: check.yaml  ci.yml  gate.yaml  nightly.yaml
core/src/: BUILD.bazel  currency.cpp  currency.h  money.cpp  money.h  money_errors.h  transaction.cpp  transaction.h
core/src/tests/: BUILD.bazel  currency_tests.cpp  money_tests.cpp  transaction_tests.cpp
tools/format/: BUILD.bazel
