module(
    name = "finances",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "aspect_rules_lint", version = "1.12.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.3.3")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")
