load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "currency",
    srcs = ["currency.cpp"],
    hdrs = ["currency.h"],
    visibility = ["//core/src/tests:__subpackages__"],
)

cc_library(
    name = "money",
    srcs = ["money.cpp"],
    hdrs = ["money.h"],
    visibility = ["//core/src/tests:__subpackages__"],
    deps = [":currency"],
)

cc_library(
    name = "transaction",
    srcs = ["transaction.cpp"],
    hdrs = [
        "transaction.h",
    ],
    visibility = ["//core/src/tests:__subpackages__"],
    deps = [":money"],
)
