load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "money_tests",
    srcs = ["money_tests.cpp"],
    tags = ["no_sanitize"],
    deps = [
        "//core/src:money",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "transaction_tests",
    srcs = ["transaction_tests.cpp"],
    tags = ["no_sanitize"],
    deps = [
        "//core/src:transaction",
        "@googletest//:gtest_main",
    ],
)
